# scanf-rs

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: audit.yml  format.yml  release.yml  tests.yml
benches/: benchmark.rs
scanf-proc-macro/: Cargo.toml
scanf-proc-macro/src/: lib.rs
src/: codegen.rs  constants.rs  error.rs  examples.rs  lib.rs  parsing.rs  tokenization.rs  types.rs  validation.rs
src/format/: format_parser.rs  mod.rs
tests/: implicit_capture_tests.rs  integration_tests.rs
