[workspace]
members = [".", "scanf-proc-macro"]
resolver = "2"

[package]
name = "scanf"
description = "Parse text inputs (inverse of print! and format!)"
version = "2.0.0"
keywords = ["scanf", "sscanf", "stdin", "input", "format"]
categories = ["parsing", "text-processing"]
readme = "README.md"
license = "Unlicense"
authors = ["Jesus Hernandez <jesushdez@protonmail.com>"]
repository = "https://github.com/jhg/scanf-rs"
exclude = [
    ".github/**",
    ".vscode/**",
    ".idea/**",
    "benches/**",
    "Cargo.lock",
    "LICENSE",
    ".gitignore",
]
edition = "2024"

[dependencies]
scanf-proc-macro = { path = "scanf-proc-macro", version = "2.0.0" }

[dev-dependencies]
criterion = "0.7"

[lib]
bench = false

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
strip = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
