[package]
name = "scanf"
description = "Parse text inputs (inverse of print! and format!)"
version = "2.0.0"
keywords = ["scanf", "sscanf", "stdin", "input", "format"]
categories = ["parsing", "text-processing"]
readme = "README.md"
license = "Unlicense"
authors = ["Jesus Hernandez <jesushdez@protonmail.com>"]
repository = "https://github.com/jhg/scanf-rs"
exclude = [
    ".github/**",
    ".vscode/**",
    ".idea/**",
    "benches/**",
    "Cargo.lock",
    "LICENSE",
    ".gitignore",
]
edition = "2024"

[lib]
proc-macro = true
bench = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
strip = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
