[package]
name = "scanf-proc-macro"
version = "1.0.0"
keywords = ["scanf", "sscanf", "stdin", "input", "format"]
license = "Unlicense"
authors = ["Jesus Hernandez <jesushdez@protonmail.com>"]
repository = "https://github.com/jhg/scanf-rs"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
