[package]
name = "scanf-proc-macro"
version = "2.0.0"
description = "Procedural macro implementation for the scanf crate (scanf! and sscanf! with implicit variable capture)."
keywords = ["scanf", "sscanf", "stdin", "input", "format"]
categories = ["parsing", "text-processing"]
readme = "README.md"
license = "Unlicense"
authors = ["Jesus Hernandez <jesushdez@protonmail.com>"]
repository = "https://github.com/jhg/scanf-rs"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
